--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "editor.inlineSuggest.showToolbar": "always",
+    "editor.inlineSuggest.showToolbar": "onHover",
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#93e6fc",
         "activityBar.background": "#93e6fc",
