--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.12",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
@@ -21,9 +21,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
-    "three": "^0.171.0",
     "save": "^2.9.0",
+    "three": "^0.171.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
