Chadda/nutrition log (#11)
merge Chadda/nutrition log onto main

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css",
               "node_modules/tailwindcss/tailwind.css",
               "node_modules/@fortawesome/fontawesome-free/css/fontawesome.css"
@@ -95,5 +96,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "3dbfc9f2-c8e4-475b-8b34-8db664b4cac0"
   }
 }
